Fix overflow on 2 column about section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -554,7 +554,7 @@ button:hover {
 
 @media screen and (max-width: 1115px) {
     .about-us-subtitle {
-        width: 75%;
+        width: 80%;
     }
 }
 
@@ -623,11 +623,22 @@ button:hover {
             font-size: 80%;
             margin-top: 136px;
         }
+
+        .about-us-subtitle {
+            width: 100%;
+        }
+
     }
 
     @media screen and (max-width: 740px) {
         .about-us-subtitle {
             width: 100%;
+        }
+
+        .about-us-text1 {
+            padding-top: 1em;
+            padding-left: 0.5em;
+            padding-right: 0.5em;
         }
 
         #contact-footer {
@@ -642,6 +653,7 @@ button:hover {
         }
     }
 
+    /* Note that this is MAX-Height for Contact page */
     @media screen and (max-height: 700px) {
         #form-main-banner2 {
             max-width: 400px;
